[gd_scene load_steps=4 format=3 uid="uid://c53ojgl4xxov8"]

[ext_resource type="Script" path="res://addons/yet_another_files/components/duplicate_dialog.gd" id="1_ptech"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jm162"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bn7up"]
outline_size = 1

[node name="DuplicateDialog" type="Window"]
title = "Duplicating file:"
size = Vector2i(300, 125)
visible = false
wrap_controls = true
unresizable = true
always_on_top = true
min_size = Vector2i(300, 110)
script = ExtResource("1_ptech")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 125)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jm162")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Name:"
label_settings = SubResource("LabelSettings_bn7up")

[node name="EditName" type="LineEdit" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnCancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnDuplicate" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Duplicate
"

[node name="FileExist" type="AcceptDialog" parent="."]
title = "Warning!"
position = Vector2i(0, 36)
size = Vector2i(500, 100)
unresizable = true
ok_button_text = "Close"
dialog_text = "A file or folder with this name already exists!"

[connection signal="close_requested" from="." to="." method="_on_btn_pressed" binds= [false]]
[connection signal="go_back_requested" from="." to="." method="_on_btn_pressed" binds= [false]]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer/BtnCancel" to="." method="_on_btn_pressed" binds= [false]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/BtnDuplicate" to="." method="_on_btn_pressed" binds= [true]]
